<resources>

    <string name="api_key">YOUR API KEY HERE :)</string>



    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Sorting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Movie detail</string>
    <string name="serializable_movie">serializable_movie</string>
    <string name="ui_title">Title</string>
    <string name="ui_poster_string">poster</string>
    <string name="mock_release_date">2015</string>
    <string name="rating_label">Vote average:</string>
    <string name="mock_rating">8/10</string>
    <string name="mock_plot_synopsis">plot synopsis</string>
    <string name="sort_by_label">Sort order</string>
    <string name="sort_order_key">order</string>
    <string name="order_def_value">popular</string>
    <string name="title_activity_settings">Settings</string>
    <string name="trailers_label">TRAILERS</string>
    <string name="action_fav">Fav</string>


</resources>
