<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.sunshine.app.DetailActivityFragment"
    android:id="@+id/parent_layout">

    <TextView
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ui_title"
        android:id="@+id/movie_title"
        android:layout_alignParentTop="true"
        android:background="#88ff171b"
        android:gravity="center_vertical"
        android:elevation="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poster"
        android:layout_below="@+id/movie_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/ui_poster_string"
        android:src="@drawable/poster_stub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mock_release_date"
        android:id="@+id/release_date"
        android:layout_below="@+id/movie_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rating_label"
        android:id="@+id/vote_label"
        android:layout_above="@+id/rating"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mock_rating"
        android:id="@+id/rating"
        android:layout_above="@+id/plot_synopsis"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mock_plot_synopsis"
            android:id="@+id/plot_synopsis"

            android:layout_marginTop="10dp" />

    <!--
    ListView does't scroll in ScrollView
    That's why i use fixed size
    I tried add root Linear layout and cut ListView from ScrollView, but design looks bad
    -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/trailersListView"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trailers_label"
        android:id="@+id/textView"
        android:layout_below="@+id/plot_synopsis"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="REVIEWS"
        android:id="@+id/textView2"
        android:layout_below="@+id/trailersListView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:id="@+id/reviewsListView"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favButton"
        android:src="@drawable/ic_grade_black_48dp"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Add to favourites"
        android:id="@+id/textView3"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/vote_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
</ScrollView>